# cnn_demo

./: .gitignore  .gitmodules  Dockerfile  Makefile  argo_template.yaml  main.py  pyproject.toml  start.sh  test_iou_computation.py  test_lr.py  train_object_detection.py
obj_detection/: __init__.py  data_loader.py  inference.py  lr_functions.py  model.py  test.py  train.py
obj_detection/dataset/: download.sh  split_dataset.sh
